# fastapi-app

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .env.example  LICENSE  README.md  aerich.ini  pyproject.toml  {{cookiecutter.env_file}}
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: cli.py  config.py  main.py  server.py  worker.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/common/: base_model.py  constants.py  deps.py  types.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/common/validators/: tortoise.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/modules/ac/: ac_deps.py  ac_model.conf  ac_policies.csv
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/modules/access_control/: access_control_controller.py  access_control_dtos.py  access_control_models.py  access_control_service.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/modules/apscheduler/: apscheduler_deps.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/modules/arq/: arq_deps.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/modules/logging/: logging_deps.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/modules/meta/: meta_controller.py  meta_module.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/modules/pagination/: pagination_deps.py  pagination_dtos.py  pagination_types.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/modules/scheduler/: scheduler_deps.py
(+12 files in other folders)
