[tool.poetry]
name = "{{cookiecutter.project_slug}}"
description = "{{cookiecutter.description}}"
version = "{{cookiecutter.version}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
{{cookiecutter.cli}} = "{{cookiecutter.package_name}}.cli:app"

[tool.black]
line-length = 90

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
